# mypilot

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  compose.yaml  ruff.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
deploy/caddy/: Caddyfile
deploy/docker/: README.md
deploy/fork/: sync-mypilot.yml
deploy/podman/: README.md
deploy/systemd/: README.md
docs/: about.md  architecture.md  comma4-install.md  development.md  device-registration.md  forking.md  go-live.md  install.md  privacy.md  security.md  self-hosting.md  update-channels.md
examples/mypilot-metrics-plugin/: README.md  pyproject.toml
examples/mypilot-metrics-plugin/mypilot_metrics_plugin/: __init__.py
mypilot-agent/: Dockerfile  README.md  requirements-dev.txt
mypilot-agent/tests/: test_offroad_gates.py  test_scheduling.py  test_status_cache.py  test_track_extraction.py
mypilot-mici/: README.md  assemble.py  backfill_tracks.py  lte_oneshot_speedtest.py  lte_speed_logger.py  publish.sh  recipe.json  recover_backlog.py  verify_assembled.py
mypilot-protocol/: pyproject.toml
mypilot-protocol/mypilot_protocol/: crypto.py
mypilot-protocol/tests/: test_crypto.py  test_crypto_interop.py  test_signing.py
mypilot-stack/api/: Dockerfile  alembic.ini  entrypoint.sh  requirements-dev.txt  requirements.txt
mypilot-stack/api/app/: __init__.py  admin_tools.py  audit.py  backups_service.py  config.py  db.py  deps.py  device_service.py  fork_config.py  geocode.py  main.py  models.py  models_catalog.py  models_service.py  ownership.py  redis_client.py  replay_service.py  routes_service.py  schemas.py  security.py  seed.py  (+4 more)
mypilot-stack/builder/: README.md
mypilot-stack/ingest/: README.md
mypilot-stack/realtime/: README.md
mypilot-stack/worker/: README.md
mypilot-web/: Dockerfile  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.ts  vitest.config.ts
mypilot-web/screenshot/: README.md  capture.mjs  setup_driving.py
mypilot-web/src/: app.css  app.d.ts  app.html  hooks.server.ts
scripts/: check_seam_imports.py  dev-sim-device.sh  dev-up.sh  gen-client.sh  generate-secrets.sh  install.sh  lib.sh
(+142 files in other folders)
