[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mypilot-protocol"
version = "0.1.0"
description = "Shared MyPilot device <-> Stack protocol: Ed25519 signing and message schemas"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=42.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mypilot_protocol*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
