[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mypilot-metrics-plugin"
version = "0.1.0"
description = "Example MyPilot extension: a Prometheus-style /api/metrics endpoint."
requires-python = ">=3.11"

# This is what makes the package a MyPilot extension: it registers a callable under the "mypilot.app"
# entry-point group. When the package is installed, the MyPilot API discovers it at startup and calls
# setup(app). With no such package installed, the app runs unchanged.
[project.entry-points."mypilot.app"]
metrics = "mypilot_metrics_plugin:setup"

[tool.setuptools]
packages = ["mypilot_metrics_plugin"]
